[project]
name = "nfvsmotifs"
dependencies = [
    'biodivine_aeon ==0.2.0a4',
    'clingo ==5.6.2',
    'networkx==2.8.8',
    'pyeda==0.28.0', # requires that the python-dev package for your python version is also installed, e.g. python3.11-dev
    'pypint==1.6.2'
]
dynamic = ["version"]


[tool.setuptools]
packages = ['nfvsmotifs', 'nfvsmotifs.FVSpython3', 'nfvsmotifs._sd_algorithms']

[tool.pyright]
include = ["nfvsmotifs", "tests"]
stubPath = "stubs"
reportMissingImports = true
reportMissingTypeStubs = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
typeCheckingMode = "strict"

[tool.mypy]
mypy_path = "stubs"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"