[project]
name = "balm"
dependencies = [
    'biodivine_aeon ==1.0.0a3',
    'clingo ==5.6.2',
    'networkx==2.8.8',
    'pypint==1.6.2',
]
dynamic = ["version"]


[tool.setuptools]
packages = ['balm', 'balm._sd_algorithms']

[tool.pyright]
include = ["balm", "tests"]
stubPath = "stubs"
reportMissingImports = true
reportMissingTypeStubs = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
typeCheckingMode = "strict"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--networksize=10"
